--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-scrolling-parallax",
+  "name": "css-scrolling-parallax", // to do
   "version": "1.0.1",
   "description": "This is the repository for the LinkedIn Learning course on CSS Scrolling and Parallax. The full course is available from [LinkedIn Learning](https://www.linkedin.com/learning/instructors/ray-villalobos).",
   "author": "Ray Villalobos",
